--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [package]
-name = "rust-book"
+name = "dependabot-generator"
 version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+clap = { version = "3.1", features = ["derive"] }
+walkdir = { version = "2.3" }
