--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.1", features = ["derive"] }
 walkdir = { version = "2.3" }
+serde = "1.0"
+serde_yaml = "0.8"
