--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ exclude = [
 [dependencies]
 clap = { version = "3.1", features = ["derive"] }
 walkdir = { version = "2.3" }
+dependabot-config = "0.2"
