chore: Use the `minimal` toolchain profile for building

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          profile: minimal
           target: ${{ matrix.target }}
           override: true
       - uses: actions-rs/cargo@v1
