--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 'lts/*'
+      - name: Install dependencies
+        run: npm install @semantic-release/exec
+      - uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: semantic-release-rust --version 1.0.0-alpha.8
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
         env:
