--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ exclude = [
 clap = { version = "3.1", features = ["derive"] }
 walkdir = { version = "2.3" }
 dependabot-config = "0.2"
+env_logger = "0.9"
+log = "0.4"
+clap-verbosity-flag = "1.0"
