--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -1,9 +1,15 @@
+branches:
+  - "main"
+
 plugins:
   - "@semantic-release/commit-analyzer"
   - "@semantic-release/release-notes-generator"
   - - "@semantic-release/github"
     - assets: ["target/release/*"]
-  - - "@semantic-release/exec"
-    - verifyConditionsCmd: "semantic-release-rust verify-conditions"
-      prepareCmd: "semantic-release-rust prepare ${nextRelease.version}"
-      publishCmd: "semantic-release-rust publish"
+  - "@semantic-release/changelog"
+  - "semantic-release-cargo"
+  - - "@semantic-release/git"
+    - assets:
+      - "CHANGELOG.md"
+      - "Cargo.toml"
+      message: "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
