--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,7 +5,13 @@ updates:
     directory: /
     schedule:
       interval: weekly
+    commit-message:
+      prefix: fix
+      include: scope
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: weekly
+    commit-message:
+      prefix: chore
+      include: scope
