--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -12,4 +12,5 @@ plugins:
     - assets:
       - "CHANGELOG.md"
       - "Cargo.toml"
+      - "Cargo.lock"
       message: "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
