--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,7 @@ license = "MIT"
 repository = "https://github.com/andreimoustache/rust-dependabot-generator"
 homepage = "https://github.com/andreimoustache/rust-dependabot-generator"
 readme = "README.md"
-exclude = [
-  ".github",
-  ".vscode"
-]
+exclude = [".github", ".vscode"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
