--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ exclude = [
 [dependencies]
 clap = { version = "4.5.40", features = ["derive"] }
 walkdir = { version = "2.3" }
-dependabot-config = "0.3"
+dependabot-config = { git = "https://github.com/taiki-e/dependabot-config.git", rev = "310a1393" }
 env_logger = "0.11"
 globset = "0.4.16"
 itertools = "0.14.0"
